--- a/style.css
+++ b/style.css
@@ -49,3 +49,24 @@ h5 {
 p{
     color: black;
 }
+body {
+    padding-top: 70px; /* Ajoutez une marge au corps pour ne pas cacher le contenu sous la barre de navigation */
+}
+
+.fixed-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1030;
+}
+
+.hidden {
+    transform: translateY(-100%);
+    transition: transform 0.3s;
+}
+
+.visible {
+    transform: translateY(0);
+    transition: transform 0.3s;
+}
