--- a/style.css
+++ b/style.css
@@ -102,7 +102,9 @@ body {
 
 /* Styles pour le menu déroulant */
 .dropdown-menu {
+    background-color: transparent;
     transition: opacity 0.3s;
+    font-weight: bolder;
 }
 
 /* Styles pour afficher le menu déroulant au survol */
@@ -129,4 +131,20 @@ body {
 .details {
     display: none;
     margin: 10px 0;
+}
+
+
+.dropdown-menu {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    position: absolute;
+}
+
+/* Ajoutez une marge inférieure pour séparer les éléments */
+.dropdown-menu.li {
+    width: 50%;
+    float: left;
+    margin-bottom: 5px; /* Vous pouvez ajuster la valeur de la marge selon vos préférences */
+    line-height: 1.5; /* Ajoutez une hauteur de ligne pour séparer le texte */
 }
